<resources>
    <string name="app_name">SPHondaBeAT</string>
    <string name="sistem_pakar_deteksi_kerusakan_pada_motor_honda_beat">Sistem Pakar Deteksi Kerusakan pada Motor Honda BeAT</string>
    <string name="diagnosa_kerusakan">Diagnosa Kerusakan</string>
    <string name="riwayat_kerusakan">Riwayat Kerusakan</string>
    <string name="logout">Logout</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="belum_punya_akun">Belum Punya Akun</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="daftar">DAFTAR</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="belum_punya_akunn">Belum Punya Akun?</string>
    <string name="sudah_punya_akun">Sudah Punya Akun?</string>
    <string name="gejala">Gejala</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="hasil_diagnosa">Hasil Diagnosa</string>
    <string name="komponen_yang_terjadi_kerusakan">Komponen yang terjadi kerusakan</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="solusi">Solusi</string>
    <string name="tidak_ada_riwayat">Tidak ada riwayat</string>
    <string name="data_gejala">Data Gejala</string>
    <string name="data_kerusakan">Data Kerusakan</string>
    <string name="data_aturan">Data Aturan</string>
    <string name="simpan">Simpan</string>
    <string name="nama_kerusakan">Nama Kerusakan</string>
    <string name="tidak_ada_gejala">Tidak Ada Gejala</string>
    <string name="atur_ulang_gejala">Atur Ulang Gejala</string>
    <string name="kode_gejala">Kode Gejala :</string>
    <string name="daftar_komponen_motor">Daftar Komponen Motor</string>
    <string name="nama_gejala">Nama Gejala</string>
    <string name="kode_kerusakan">Kode Kerusakan</string>
    <string name="kendala">Kendala</string>
    <string name="tidak_ada_kendala">Tidak ada kendala</string>
    <string name="data_kendala">Data Kendala</string>
    <string name="hapus_gejala">Hapus Gejala</string>
    <string name="hapus_kendala">Hapus Kendala</string>
    <string name="forward_chaining">Forward Chaining</string>
    <string name="nama_kendala">Nama Kendala :</string>
    <string name="kode_kendala">Kode Kendala :</string>
    <string name="cara_memperbaiki_kerusakan">Cara Memperbaiki Kerusakan</string>
</resources>