<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_red">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/nama_kerusakan"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_nama_kerusakan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/nama_kerusakan"
            android:textColor="@color/charcoal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/kendala"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_daftar_gejala"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/tidak_ada_kendala"
            android:textColor="@color/charcoal" />

        <Button
            android:id="@+id/btn_atur_ulang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/red_700"
            android:text="@string/atur_ulang_gejala"
            android:textColor="@color/white"
            app:backgroundTint="@color/teal_700" />

    </LinearLayout>

</ScrollView>