<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_red"
    android:gravity="center|top"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/text_pertanyaan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/gejala"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_ya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@color/teal_700"
            android:text="@string/ya"
            android:textColor="@color/white"
            app:backgroundTint="@color/teal_700" />

        <Button
            android:id="@+id/btn_tidak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@color/red_700"
            android:text="@string/tidak"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>